src/objects/AR_Offers__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AR Offers</relationshipLabel>
        <relationshipName>AR_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Details__c</fullName>
        <label>Offer Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>AR Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARO-{0000}</displayFormat>
        <label>Offers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>